# Practical-Assignments

./: README.md
Análise Matemática II/1_Trabalho/: InterfaceMNPVI.mlx  NAdams.m  NAux.m  NEuler.m  NEulerM.m  NODE45.m  NRK2.m  NRK4.m  appAutores.mlapp  appMaquinaPVI.mlapp
Análise Matemática II/2_Trabalho/: NEulerMSED.m  NEulerSED.m  NRK2SED.m  NRK4SED.m  appAutores.mlapp  appMaquinaPVISED.mlapp
Análise Matemática II/At03TrabMaquinaCDI/: appAutores.mlapp  appMaquiaCDI.mlapp
Gestão/: Trabalho_final Gestão (Moving2U).pptx
Gestão de Projetos e Software/Deliverables/: Arquitetura do sistema.docx  D1.1.1 - Vision and Scope.docx  D1.1.2 - Milestone M1.1 Report.docx  D1.2.1 - Software Development Plan.docx  D1.2.2 - Quality Assurance Plan.docx  D1.2.3 - Milestone M1.2 Report.docx  D2.1.1 - Software Requirements Specification.docx  D2.1.2 - Risk Plan.docx  D2.1.3 - Aceptance Test Plan.docx  D2.1.4 - Milestone M2.1 Report.docx  D2.2.3 - Milestone M2.2 Report.docx  D2.3 - Milestone M2.3 Report.docx  D2.3.1 - Acceptance Test Report.docx  D2.3.2 - Quality Assessment Report.docx
Gestão de Projetos e Software/Meeting Minutes/: GPS2223 - Notas da Reuniao 1 - Team14.docx  GPS2223 - Notas da Reuniao 10 - Team14.docx  (+10 more)
Linguagens Script/: package.json
Programação Orientada a Objetos/Code/: CMakeLists.txt  Comandos.cpp  Comandos.h  Dia.cpp  Dia.h  Edificios.cpp  Edificios.h  Ficheiros.cpp  Ficheiros.h  Interface.cpp  Interface.h  Jogo.cpp  Jogo.h  Mapa.cpp  Mapa.h  Recursos.cpp  Recursos.h  Trabalhadores.cpp  Trabalhadores.h  Zona.cpp  Zona.h  main.cpp  utils.cpp  utils.h
(+325 files in other folders)
